# OculusSonar-ObjectDetection

./: .gitignore  ML_DETECTION_GUIDE.md  README.md  annotate_raw.py  annotate_simple.py  config.yaml  extract_raw_frames.py  extract_with_colormap.py  main.py  quick_start_ml.py  requirements.txt  requirements_ml.txt  train_model.py
src/: object_detector.py  sonar_filters.py  sonar_processor.py  specialized_detector.py  visualizer.py
src/ml_detector/: ANNOTATION_GUIDE.md  __init__.py  data_annotator.py  ml_sonar_detector.py  train_sonar_detector.py  validate_model.py
src/oculus_replay_node/: README-oculus_replay_node.md  package.xml  setup.cfg  setup.py
src/oculus_replay_node/oculus_replay_node/: oculus_file_reader_node.py  oculus_replay_node.py
src/oculus_ros2/: README-oculus_ros2.md  README-oculus_ros2_upd.md
src/oculus_ros2/oculus_ros2/src/: sonar_viewer.cpp
src/oculus_sdk/: README-SDK-CP.md  README-SDK-RC.md  README-oculus_sdk.md
src/oculus_sdk/Code/: OculusSDK.pro  main.cpp
src/oculus_sdk/Code/Controls/: RangeSlider.cpp
src/oculus_sdk/Code/Displays/: SonarSurface.cpp
src/oculus_sdk/Code/Oculus/: OsClientCtrl.cpp  OsClientCtrl.h  OsStatusRx.cpp
src/oculus_tools/: package.xml  setup.py
src/oculus_tools/launch/: test_oculus_replay.launch.py
src/oculus_tools/scripts/: parse_oculus_recording.py
training_runs/sonar_detection_20250812_173805/: evaluation_metrics.json  training_config.yaml
training_runs/sonar_detection_20250812_173805/dataset/: data.yaml
training_runs/sonar_detection_20250812_173805/train/: args.yaml  results.csv
(+399 files in other folders)
