<?xml version="1.0"?>
<package format="3">
  <name>oculus_replay_node</name>
  <version>0.0.1</version>
  <description>Replay .oculus sonar data using the Blueprint SDK</description>
  <maintainer email="stanschultes@live.com">Stan Schultes</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
