<?xml version="1.0"?>
<package format="3">
  <name>oculus_tools</name>
  <version>0.1.0</version>
  <description>Scripts and launch files for Oculus sonar testing</description>

  <maintainer email="stanschultes@live.com">Stan Schultes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
